# NeuralNetwork_from_scratch_cpp

./: .gitignore  CMakeLists.txt  README.md  nn_from_scratch
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
src/: .NeuralNetwork.cpp.swp  Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
